		"Pawel A. Gajda" <mis@k2.net.pl>.
	- fix: duplicate headerFree() on instalBinaryPackage error return.
	- fix: segfault on exit of "rpm -qp --qf '%{#fsnames}' pkg" (#20595).
	- hpux w/o -D_OPEN_SOURCE has not h_errno.
	- improved find-{requires,provides} for aix4/hpux/irix6/osf.
		Tim Mooney<mooney@dogbert.cc.ndsu.NoDak.edu>
	- fix: synthesized callbacks for removed packages have not a pkgkey.

3.0.5 -> 3.0.6
	- python bindings to query and verify signatures.
	- add callbacks on package erasure.
	- fix: preserve cpio errno when using Fclose with libio.
	- fix: initialize sigs everywhere in python header object.
	- translate rpm.8 man page (Peter Ivanyi <ivanyi@internet.sk>).
	- popt: support for float/double args.
	- fix: honor --test when doing --freshen.
	- add alpha* architectures.

3.0.4 -> 3.0.5
	- fix: --define and --eval on alpha were broke.
	- configure.in fiddles for BSD systems (Patrick Schoo).
	- solaris2.6: avoid bsearch with empty dir list (Ric Klaren - klaren@cs.utwente.nl)
	- include RPM-GPG-KEY in file manifest.
	- Add ia64 and sparc64 changes. 
	- rpm.spec: add per-platform sub-directories.
	- FreeBSD fixes (bero@redhat.com).
	- handle version 4 packaging as input.
	- builds against bzip2 1.0
	- fix: resurrect symlink unique'ifying property of finger prints.
	- fix: broken glob test with empty build directory (Geoff Keating).
	- fix: create per-platform directories correctly.
	- update brp-* scripts from rpm-4.0, enable in per-platform config.
	- alpha: add -mieee to default optflags.
	- add RPMTAG_OPTFLAGS, configured optflags when package was built.
	- add RPMTAG_DISTURL for rpmfind-like tools (content unknown yet).
	- teach brp-compress about /usr/info and /usr/share/info as well.
	- update macros.in from rpm-4.0 (w/o dbi configuration).
        - fix: don't expand macros in false branch of %if (kasal@suse.cz).
        - fix: macro expansion problem and clean up (#11484) (kasal@suse.cz).
	- uname on i370 has s390 as arch (#11456).